# weather-stations

./: .gitignore  .pylintrc  99913.json  AGENTS.md  README.md  database.py  duplicate_stations.json  inventory.db  locations.sql  pyproject.toml  requirements.txt  setup.py  stations.db  tables.sql
.github/: copilot-instructions.md
.github/workflows/: database.yml  inventory.yml  lint.yml  linter.yml  mirror.yml  stations.yml  sync-database.yml  sync-stations.yml  test.yml  typecheck.yml
cli/: station_schema.json
cli/janitor/: __init__.py  cli.py  database.py  utils.py  validation.py
cli/tests/: test_cli.py  test_database.py  test_validation.py
import/canada/: import.py  stations.csv
lib/: __init__.py  checks.py  generators.py  mutations.py  templates.py  utils.py
scripts/: active.py  canada_auto.py  qa_check.py  timezones.py
scripts/australia/: import.py  stations.js  stations.json  stations.txt
scripts/austria/: import.py  partial_matches.md
scripts/canada/: import.py
scripts/germany/: duplicate_stations.json  duplicate_stations_reported.json  (+3 more)
stations/: 00FAY.json  00TG6.json  01001.json  01002.json  01003.json  01004.json  01005.json  01006.json  01007.json  01008.json  01009.json  01010.json  01011.json  01014.json  01015.json  01016.json  01017.json  01019.json  01020.json  01023.json  01024.json  01025.json  01026.json  01027.json  01028.json  01033.json  01034.json  01035.json  01037.json  01041.json  01043.json  01044.json  01045.json  01046.json  01047.json  01049.json  01051.json  01052.json  01055.json  01057.json  (+33239 more)
utils/: update.py
(+13 files in other folders)
